<resources>
    <string name="lan_ting_light">fonts/FZLanTingHeiS-L-GB-Regular.TTF</string>
    <string name="lan_ting_bold">fonts/FZLanTingHeiS-DB1-GB-Regular.TTF</string>
    <string name="lobster">fonts/Lobster-1.4.otf</string>

    <string name="toolbar_alpha_scroll_behavior">com.mor.eye.ui.ToolbarAlphaScrollBehavior</string>

    <string name="app_name">eye</string>
    <string name="add_attention">+关注</string>
    <string name="advertising">广告</string>
    <string name="create_date_hour">%s小时前</string>
    <string name="create_date_day">%s天前</string>
    <string name="create_date_month">%s月前</string>
    <string name="follow_description">%1$s / #%2$s</string>
    <string name="select">精选</string>
    <string name="small_description">#%1$s / %2$s</string>
    <string name="like_num">赞 %s</string>
    <string name="category1">#%s</string>
    <string name="empty_emoji">😏</string>
    <string name="empty_prompt">暂无内容</string>
    <string name="end">- END -</string>
    <string name="search_hit">搜索视频、作者、用户及标签</string>
    <string name="search_section_1">搜索历史</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="search_section_2">热搜关键词</string>
    <string name="view_all">显示全部</string>
    <string name="exit_program_hint">再按一次退出</string>
    <string name="all_categories">置顶分类排序</string>
    <string name="by_share_num">被分享数</string>
    <string name="by_like_num">被喜欢数</string>
    <string name="video_num">视频数</string>
    <string name="by_focus_num">%s 被关注</string>
    <string name="download">缓存</string>
    <string name="recommend">相关推荐</string>
    <string name="tags">#%s#</string>
    <string name="comment">评论:</string>
    <string name="video_default_time">00:00</string>
    <string name="net_invalid">网络错误</string>
    <string name="eyepetizer">Eyepetizer</string>
    <string name="splash_subtitle_cn">每日精选视频推介，让你大开眼界。</string>
    <string name="splash_subtitle_en">Daily appetizers for your eyes，Bon eyepetit.</string>
    <string name="notification">Notification</string>
    <string name="community">Community</string>
    <string name="click_retry">点击屏幕重试</string>
    <string name="mine">我的</string>
    <string name="notify">通知</string>
    <string name="focus">社区</string>
    <string name="homePage">首页</string>
    <string name="more">更多</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="moment">朋友圈</string>
    <string name="wechat">微信</string>
    <string name="share">分享</string>
    <string name="isWorking">正在紧张施工</string>
    <string name="setting">设置</string>
    <string name="login_tip">点击登录即可发表评论及同步已喜欢视频</string>
    <string name="like">喜欢</string>
    <string name="preload">缓存</string>
    <string name="mime_focus">我的关注</string>
    <string name="mime_view_history">观看记录</string>
    <string name="mime_report">意见反馈</string>
    <string name="mime_notification_switch">通知开关</string>
    <string name="version">Version</string>
    <string name="subscript_en">- your contribution is highly apprecialed! -</string>
    <string name="subscript_cn">让每一个人都开眼，开了又开。</string>
    <string name="setting_close">关闭</string>
    <string name="setting_open">打开</string>
    <string name="setting_format">- %s -</string>
    <string name="daily_update">日报更新提醒</string>
    <string name="wifi_auto_play">Wi-Fi 关注页自动播放</string>
    <string name="translate">翻译</string>
    <string name="clear_cache">清除所有缓存</string>
    <string name="cache_dir">选择缓存路径</string>
    <string name="update">检查版本更新</string>
    <string name="ua">用户协议</string>
    <string name="video_stament">视频功能声明</string>
    <string name="report">版权举报</string>
    <string name="login">登录</string>
    <string name="mime_post">我要投稿</string>
    <string name="separator">%1$s / %2$s</string>
    <string name="expand">展开</string>
    <string name="default_network_error_message">连接失败</string>
    <string name="default_http_error_message">网络连接异常</string>
    <string name="default_unexpected_error_message">未知错误</string>
    <string name="empty_state">暂无内容</string>
    <string name="add_tag">Add Tag</string>
</resources>
