<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_line_color"
        app:layout_constraintBottom_toTopOf="@+id/bottomTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/bottomTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/tabHomePage"
            style="@style/bottomTab"
            android:text="@string/homePage" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/tabFocus"
            style="@style/bottomTab"
            android:text="@string/focus" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/tabPublish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/publish_add" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/tabNotify"
            style="@style/bottomTab"
            android:text="@string/notify" />


        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/tabMine"
            style="@style/bottomTab"
            android:text="@string/mine" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>