<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.activity.ShareActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_share_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <FrameLayout
        android:id="@+id/layout_cover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_370">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_8"
            android:scaleType="centerCrop"
            android:src="@mipmap/share_watermark_border" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/eye_loading_icon" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_cover"
        android:paddingTop="@dimen/dp_24"
        android:visibility="gone"
        tools:visibility="visible">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_share"
            style="@style/main_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/share"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            tools:textColor="@android:color/black" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/main_tv"
            android:layout_below="@+id/tv_share"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/share"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            tools:textColor="@android:color/black" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/view_line1"
            style="@style/view_line"
            android:layout_below="@+id/tv_title"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_16" />

        <LinearLayout
            android:id="@+id/layout_bottom_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line1"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_share_vx"
                style="@style/content_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_share_wechat"
                android:gravity="center"
                android:text="@string/wechat"
                android:textSize="@dimen/sp_10" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_share_vx_friend"
                style="@style/content_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_share_moment"
                android:gravity="center"
                android:text="@string/moment"
                android:textSize="@dimen/sp_10" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_share_wb"
                style="@style/content_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_share_weibo"
                android:gravity="center"
                android:text="@string/weibo"
                android:textSize="@dimen/sp_10" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_share_qq"
                style="@style/content_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_share_qq"
                android:gravity="center"
                android:text="@string/qq"
                android:textSize="@dimen/sp_10" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/content_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_more"
                android:gravity="center"
                android:text="@string/more"
                android:textSize="@dimen/sp_10" />
        </LinearLayout>

        <View
            android:id="@+id/view_line2"
            style="@style/view_line"
            android:layout_below="@+id/layout_bottom_share"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_16" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            style="@style/main_tv"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_24"
            android:padding="@dimen/dp_8"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>
</RelativeLayout>